--- a/style.css
+++ b/style.css
@@ -17,12 +17,10 @@
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-
+@media (max-width: 768px) {
   .header {
     text-align: center;
   }
-
 }
 .main {
   display: block;
@@ -32,20 +30,22 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
 }
 ul {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
-li, h3 {
-  list-style:none;
+li,
+h3 {
+  list-style: none;
 }
-input,button{
-  outline:none;
+input,
+button {
+  outline: none;
 }
 button {
   background: none;
@@ -57,7 +57,7 @@ button {
   cursor: pointer;
 }
 button:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 /* Heading */
 h3,
@@ -105,12 +105,12 @@ label[for="new-task"] {
   justify-content: space-between;
   align-items: center;
 }
-.list-item> * {
+.list-item > * {
   vertical-align: middle;
 }
 
 .list-item > input[type="checkbox"] {
-   margin: 0 10px;
+  margin: 0 10px;
 }
 .list-item > label {
   padding-left: 10px;
@@ -118,8 +118,8 @@ label[for="new-task"] {
   font-size: 18px;
   width: 226px;
 }
-.list-item >    input[type="text"] {
-  width: 226px
+.list-item > input[type="text"] {
+  width: 226px;
 }
 button.delete img {
   height: 2em;
@@ -132,20 +132,20 @@ button.delete img:hover {
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display:none
+ul li input[type="text"] {
+  display: none;
 }
 
-ul .editMode input[type=text] {
-  display:inline-block;
-  width:224px
+ul .editMode input[type="text"] {
+  display: inline-block;
+  width: 224px;
 }
 
 ul .editMode label {
-  display:none;
+  display: none;
 }
