--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.add-task__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-task__row-wrapper {
   display: flex;
 }
 ul {
@@ -121,12 +121,12 @@ label[for="new-task"] {
 .list-item > input[type="text"] {
   width: 226px;
 }
-.delete img {
+.list-item__delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+.list-item__delete img:hover {
   transform: rotateZ(0);
 }
 
